force-app/main/default/objects/Weather_Setting__c/Weather_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Weather Setting</label>
</CustomObject>