force-app/main/default/objects/Weather_Setting__c/fields/Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Api_Key__c</fullName>
    <label>Api Key</label>
    <type>TextArea</type>
</CustomField>