force-app/main/default/objects/Weather_Setting__c/fields/Forecast_Service_URL__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Service_URL__c</fullName>
    <label>Forecast Service URL</label>
    <type>TextArea</type>
</CustomField>