force-app/main/default/objects/Weather_Setting__c/fields/Lower_Limit__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit__c</fullName>
    <label>Lower Limit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>