force-app/main/default/objects/Weather_Setting__c/fields/Lower_Limit_Message__c.field-meta.xml
<CustomField>
    <fullName>Lower_Limit_Message__c</fullName>
    <label>Lower Limit Message</label>
    <type>TextArea</type>
</CustomField>