force-app/main/default/objects/Weather_Setting__c/fields/Normal_Level_Message__c.field-meta.xml
<CustomField>
    <fullName>Normal_Level_Message__c</fullName>
    <label>Normal Level Message</label>
    <type>TextArea</type>
</CustomField>